IP V1 chap 5 Grace Revisions

--- a/escritos-volumen-1/updated/06-capitulo-5.adoc
+++ b/escritos-volumen-1/updated/06-capitulo-5.adoc
@@ -21,7 +21,7 @@ dado y luego levantaron su talón contra Él. (Eze.
 16:7; Deut.
 32:15) En términos simples,
 introdujeron en sus propias vasijas el conocimiento que
-pudieron de Él y luego lo dispusieron para sí mismos.
+pudieron de Él, y luego lo dispusieron para sí mismos.
 Vivieron a partir de sí mismos,
 sin la fresca corriente de vida que brota de la fuente
 de la que venía el conocimiento de ellos.
@@ -32,21 +32,21 @@ y los profetas pensaban que podían profetizar por otro espíritu.
 (Jer.
 2:8) De este modo, el Señor Dios de vida no vivía en ellos,
 más bien ellos vivían en las cosas que alguna vez salieron de la vida.
-Al separarse de la fuente,
-quedaron muertos y sólo podían alimentar la parte muerta en ellos,
-esa que estaba separada de Dios.
+Al separarse de la fuente
+quedaron muertos, y sólo podían alimentar la parte muerta en ellos,
+la parte que estaba separada de Dios.
 Por tanto, aunque profesaban grandes cosas, multiplicaban oraciones, sacrificios,
 ayunos y se acercaban a Dios con sus labios,
 sus corazones estaban lejos de Él. Ellos habían abandonado la fuente;
 no bebían del agua de la fuente, no bebían de la Roca que los seguía,
 sino del agua de sus propias cisternas.
 Establecieron ese conocimiento de la ley como su luz,
-el cual habían excavado con las herramientas de su propio entendimiento
+el que habían excavado con las herramientas de su propio entendimiento
 sin el Espíritu que la escribió. Este fue el error del antiguo Israel:
 Bebieron muy celosamente de las aguas de la ley, pero no las bebieron de la fuente,
 sino de las cisternas que habían cavado.
 
-Y así como sucedió con el antiguo Israel ha sucedido con Israel desde entonces.
+Y así, tal como sucedió con el antiguo Israel, ha sucedido con Israel desde entonces.
 El Israel cristiano siempre está reincidiendo,
 siempre está olvidando al Señor. Siguen tomando lo que pueden de
 Él para vivir de sí mismos y rechazan vivir por medio de Él. Obtienen
@@ -60,7 +60,7 @@ Incircuncisos como los paganos,
 ignorantes de la virtud y del poder de la vida como los paganos,
 en lucha constante contra el pecado con lo que no puede vencer al pecado,
 en consecuencia,
-son esclavos de sus pasiones y de su corrupción también. Al igual que
+son esclavos de sus pasiones y también de su corrupción. Al igual que
 los paganos no conocen la verdad que lo hace a uno verdaderamente libre.
 
 ¡Ay! ¡Ay!
@@ -74,15 +74,15 @@ Este ha sido el estado de apostasía desde los días de los apóstoles,
 en el que ha reinado lo que no es de Dios y lo que es de Dios ha sufrido y ha sido censurado.
 
 La profunda consciencia de esto ha afectado mi alma desde mi juventud,
-cada vez que el testigo eterno se despertaba en mí
+cada vez que el Testigo eterno se despertaba en mí
 y Su luz eterna me manifestaba las tinieblas.
-En aquel entonces yo no sabía que esa era la luz y seguía intentando medir Sus apariciones
-en mí mediante las palabras que la propia luz le había hablado a otros anteriormente.^
+En aquel entonces yo no sabía que esa era la luz, y seguía intentando medir Sus apariciones
+en mí por medio de las palabras que la propia luz le había hablado a otros anteriormente.^
 footnote:[Es decir, las palabras de las Escrituras escritas por los profetas y apóstoles.
 Él trató de medir e interpretar la aparición de la luz de Dios
 en su corazón por medio de su propio entendimiento de esas palabras.]
 De esta manera colocaba mi propio entendimiento y mi propia comprensión como la medida,
-aunque en ese momento no percibía ni pensaba lo estaba haciendo, y así,
+aunque en ese momento no percibía ni pensaba que lo estaba haciendo, y así,
 por causa de la ignorancia,
 mataba continuamente la vida y me conformaba con la apariencia
 de vida que mi intelecto juzgaba más conveniente para las Escrituras.
@@ -92,12 +92,12 @@ algo que derretiría el corazón más duro si oyera el relato.
 Sin embargo, el Señor estaba conmigo en esa oscuridad,
 me estaba protegiendo y me estaba formando para Él. Y el sabor que tuve de Él entonces,
 fue mucho más allá de lo que yo había conocido anteriormente en la forma más pura de
-mi religión. Él poderosamente calló mi intelecto y preservó mi vida del traidor.
+mi religión. Él calló poderosamente mi intelecto y preservó mi vida del traidor.
 No obstante,
 aquello sobre lo que el tentador había hecho su obra no fue completamente
 destruido en mí y el Señor le permitió poner una trampa.
 Mis pies muy pronto se enredaron inconscientemente,
-mi sencillez fue traicionada y la parte carnal creció sabia
+mi sencillez fue traicionada, y la parte carnal creció sabia
 por los ejercicios con los que el Señor me había tratado.
 Esto me envenenó y me dolió;
 golpeó la raíz de mi vida y la muerte creció insensible sobre mí.
@@ -148,18 +148,19 @@ Pero el tentador también se erigió para enredar al Israel de Dios.
 Con ese fin sacó a la luz imágenes y semejanzas pintadas
 de lo que Israel deseaba y estaba buscando.
 Ideó varias formas de adoración con las cuales seducir a unos,
-inventó varios tipos de conceptos con los cuales seducir a otros y produjo
-varias apariciones frescas de amor y libertad para tentar al pueblo de
+inventó varios tipos de conceptos con los cuales seducir a otros, y produjo
+varias apariencias frescas de amor y libertad para tentar al pueblo de
 Dios a apartarse de en pos del Espíritu que se levantó para liberarlo.
 Así surge el enemigo y prevalece.
 Él divide en Jacob y dispersa en Israel.
-Arrastra a una parte a esta forma, a otra parte hacia aquella otra;
+Arrastra a una parte a esta forma, a otra parte a aquella otra;
 a unos a este concepto, a otros a aquel otro; a unos a esta imagen,
 a otros a aquel ídolo espiritual.
-Todo lejos de la vida, lejos del poder, lejos del Salvador y detiene la verdadera obra;
-la detiene en la nación y la detiene en los espíritus de las personas.
+Todo lejos de la vida, lejos del poder,
+lejos del Salvador y así se detiene la verdadera obra;
+se detiene en la nación y se detiene en los espíritus de las personas.
 
-Y ¿dónde está ahora el pueblo que el Señor estaba redimiendo?
+Y, ¿dónde está ahora el pueblo que el Señor estaba redimiendo?
 ¿Dónde está el pueblo de oración, el pueblo anhelante, el pueblo de luto,
 el pueblo que habría viajado de costa a costa para tener la voluntad de Dios revelada?
 ¿No han corrido hacia la tierra?
@@ -187,7 +188,7 @@ la ha mantenido abajo deberá ser juzgado y puesto bajo juicio.
 sino al reconocer y llegar a esa luz en los profetas que
 los expuso y juzgó? Ustedes también han adorado ídolos.
 Ustedes también se han prostituido y se han enardecido con ídolos bajo todo árbol frondoso.
-Cada cosa nueva, cada apariencia fresca,
+Cada cosa nueva, cada nueva aparición,
 cada ídolo atractivo los ha tentado a apartarse del Dios vivo.
 Cuando una forma de adoración les ha parecido seca y estéril, la dejaron.
 Cuando algunos conceptos les han parecido vacíos y oscuros, se cansaron de ellos.
@@ -208,7 +209,7 @@ algo que los juzgue tiene que ser despertado en ustedes,
 y ese algo tiene que producir Su juicio hasta la victoria.
 Ese espíritu que gobierna ahora en ustedes y mantiene a la vida abajo sabe esto muy bien,
 y por eso hace lo posible para que ustedes no reconozcan el juicio.
-De hecho, trata de evitar que la luz en otros lo juzgue.
+De hecho, trata de evitar que la luz en otros los juzgue.
 "`No juzguen,`" dice, "`porque todo juicio está encomendado al Hijo.`"
 Es cierto, ¿pero no debería juzgar la luz del Hijo?
 La luz de la candela, la que el Señor ha iluminado en un corazón,
@@ -240,7 +241,7 @@ en dondequiera que la tierra del Padre se abra para beberlas.
 [.numbered]
 1+++.+++ Que la única manera de ser salvos del pecado y de la ira eterna es por medio de Cristo,
 aquel que murió en Jerusalén. No hay nombre, virtud,
-vida o poder bajo el cielo por el cual el hombre perdido pueda ser salvo; sólo por Él.
+vida o poder dado bajo el cielo, por el cual el hombre perdido pueda ser salvo; sólo por Él.
 
 [.numbered]
 2+++.+++ Que la única manera de ser salvos por Él es,
@@ -254,7 +255,7 @@ por la mera creencia en un Mesías venidero ni por guardar todas las leyes
 y ordenanzas de Moisés. Tampoco puede ser salvo alguien hoy,
 por la mera creencia en un Cristo ya venido,
 ni por guardar todo lo que los apóstoles mandaron o practicaron.
-Un hombre es salvo al recibirlo a Él en el corazón, ahí Él obra la salvación.
+El hombre es salvado al recibirlo a Él en el corazón, donde Él obra la salvación.
 
 [.numbered]
 3+++.+++ Que la única manera de recibir a Cristo en el corazón y que Él sea formado ahí es,
@@ -286,19 +287,19 @@ puede que le esté prestando oído a la luz de la consciencia natural.
 
 [.discourse-part]
 _Respuesta 1:_
-Si es solo la luz de la consciencia natural y aún así lo
-sigue arrastrando del pecado que lo separa de Dios,
-y lo prepara para entender, creer y recibir de Cristo, no es un engaño tan malo.
-Pero si resulta que ha sido la luz del Espíritu y usted toda su vida la ha estado
-tomando como la luz de la consciencia natural (y por eso ha despreciado,
+Si es sólo la luz de la consciencia natural y aun así te
+sigue alejando del pecado que te separa de Dios,
+y te prepara para entender, creer y recibir de Cristo, no es un engaño tan malo.
+Pero si resulta que ha sido la luz del Espíritu, y tú toda tu vida la has tomado
+como la luz de la consciencia natural (y por eso has despreciado,
 o al menos, desatendido la luz del Espíritu),
-entonces encontrará que este es un engaño mucho peor.
+entonces encontrarás que este es un engaño mucho peor.
 
 [.discourse-part]
-_Respuesta 2:_ Yo le puedo mostrar mediante una escritura expresa,
+_Respuesta 2:_ Yo te puedo mostrar mediante una escritura expresa,
 que es obra del Espíritu convencer de pecado (Juan 16:8), y también, que la ley,
 la cual es espiritual, manifiesta lo que es corrupto y carnal (Rom.
-7:14). ¿Puede usted demostrarme mediante las Escrituras
+7:14). ¿Puedes tú demostrarme mediante las Escrituras
 que la consciencia natural puede convencer de pecado?
 
 [.discourse-part]
@@ -309,17 +310,17 @@ porque lo que es natural no puede descubrir lo que es espiritual.
 
 [.discourse-part]
 _Respuesta 4:_
-El apóstol dice que es la gracia la que se ha manifestado a todos los hombres,
+El apóstol dice que la gracia se ha manifestado a todos los hombres,
 y que no sólo enseña piedad, sino también sobriedad y justicia.
 (Tito 2:11-12) La luz de la naturaleza caída es tinieblas y no puede enseñar nada de Dios.
 Lo que cualquier hombre aprende hoy del verdadero
 conocimiento de Dios lo aprende por gracia,
 la gracia que brilla en las tinieblas de la naturaleza
 del hombre para leudarla con el verdadero conocimiento.
-Aún así, el hombre, al ser tinieblas, no tiene manera de comprenderlo,
+Aun así, el hombre, al ser tinieblas, no tiene manera de comprenderlo,
 ni tampoco puede darle su verdadero nombre.
-Por tanto, preste atención,
-no sea que (por ignorancia) blasfeme de la santa luz del Espíritu puro,
+Por tanto, presta atención,
+no sea que (por ignorancia) blasfemes de la santa luz del Espíritu puro,
 llamando natural (al mirar con el ojo carnal),
 lo que con el ojo espiritual se ve que es espiritual.
 
@@ -330,15 +331,15 @@ lo que le da al hombre consciencia de su muerte y oscuridad
 tiene que ser algo diferente a su propia naturaleza,
 es decir,
 tiene que ser la luz del Espíritu de Cristo brillando en su oscuro corazón y en su consciencia.
-Esta es la semilla de la mujer que no sólo destruye,
+Es la Semilla de la mujer la que no sólo destruye,
 sino que también descubre las obras de la serpiente.
-Ahora, esta semilla, esta luz es una en todos,
+Ahora, esta Semilla, esta luz es una en todos,
 aunque han habido varias dispensaciones de ella.
 Una dispensación para los gentiles, en quienes brotaba de forma oculta.
 (Rom.
 2:14) Otra para los judíos,
 en quienes era rigurosamente provocada mediante la ley escrita dada,
-quienes por los tipos y sombras y ejercicios justos de acuerdo a la ley,
+quienes por los tipos y sombras y justos ejercicios de acuerdo a la ley,
 debían despertarse a la semilla viva.
 (Miq.
 6:8) Otra para los cristianos,
@@ -354,14 +355,14 @@ siendo que los hombres carecen de la verdadera plomada mediante la cual medirla,
 tienen que adivinarla en la sabiduría de sus propias comprensiones.
 
 ¡No cierren sus ojos ahora, ustedes sabios,
-abran sus corazones y dejen entrar al que llama,
-al que puede salvarlos y lo hará! Porque no es un concepto de un Cristo externo
-(junto con prácticas de auto negación y auto disciplina) lo que puede salvar,
+abran sus corazones y dejen entrar Al que llama,
+Al que puede salvarlos y lo hará! Porque el concepto de un Cristo externo
+(junto con prácticas de auto negación y auto disciplina) no es lo que puede salvar,
 sino oír a Cristo llamando a la puerta y dejándolo entrar
 al corazón. Sólo esto abrirá correctamente las Escrituras.
 Sí, esta es la llave que verdaderamente abrirá palabras, cosas y espíritus,
 pero el que abre sin esta llave es un ladrón y salteador,
-y tendrá que devolver todo lo que se ha robado el día del juicio de Dios.
+y en el día del juicio de Dios tendrá que devolver todo lo que se ha robado.
 ¡Ay de aquel que cuando sea despojado de lo que se ha robado sea hallado desnudo!
 
 Las Escrituras fueron dadas al pueblo de Dios; parte para los judíos,
@@ -377,13 +378,13 @@ estas percepciones carnales del hombre (con toda su fe,
 esperanza, amor, conocimiento, ejercicios, oraciones, lágrimas,
 ayunos y demás imitaciones) se convertirán en pérdida para él,
 cuando Dios recupere Sus Escrituras del espíritu oscuro del hombre
-(quien las ha rasgado y profanado en exceso con sus propias ideas,
+(quien las ha desgarrado y profanado en exceso con sus propias ideas,
 adivinanzas e imaginaciones) y las restaure de nuevo en Su pueblo.
 
 Los profetas y los apóstoles que escribieron las Escrituras,
 primero tuvieron la vida en ellos, y el que entiende sus palabras,
-primero debe tener también la vida en él. El que entiende las palabras de vida primero
-tiene que tener vida en él. La vida es la medida y el discernimiento de las palabras;
+debe tener primero la vida en él. El que entiende las palabras de vida primero
+debe tener vida en él. La vida es la medida y el discernimiento de las palabras;
 las palabras no miden ni disciernen la vida.
 Cuando las Escrituras son interpretadas por la vida y por el Espíritu que las escribió,
 no hay más disputas ni más contiendas con respecto a ellas.
@@ -439,19 +440,20 @@ Pregunta: ¿Qué es el fruto prohibido?
 [.discourse-part]
 Respuesta: Es conocimiento sin Vida.
 Es conocimiento en la parte terrenal, conocimiento adquirido de abajo, no dado de arriba.
-Este conocimiento le promete a los hombres hacerlos como Dios y a darles
+Este conocimiento les promete a los hombres hacerlos como Dios, y darles
 la capacidad de discernir y distinguir entre lo bueno y lo malo,
 lo cual es propiedad particular de Dios.
 Comer de este árbol fue la ruina de Adán, la ruina de los gentiles,
 la ruina de los judíos y la ruina de los cristianos.
-Todos se han alimentado del árbol del conocimiento y se
-han separado de la Vida en sus varias dispensaciones.
+Todos estos, en sus varias dispensaciones,
+se han alimentado del árbol del conocimiento y se
+han separado de la Vida.
 
 [.discourse-part]
 Pregunta: ¿Cómo es que este fruto se constituye en ruina para el hombre?
 
 [.discourse-part]
-Respuesta: Porque la sabiduría y el conocimiento que reúne proveniente de ese fruto,
+Respuesta: Porque la sabiduría y el conocimiento que recoge de ese fruto,
 y del que además se alimenta, lo pervierten.
 Esto lo hace sabio en la parte equivocada y lo exalta contra la Vida.
 Desgana el apetito verdadero e incrementa el apetito equivocado,
@@ -475,7 +477,7 @@ Pregunta: ¿De qué comida se debería alimentar el hombre?
 Respuesta: Del Árbol de la Vida; de la Palabra que vive y permanece para siempre,
 la cual está en medio del jardín de Dios.
 Esta misma Palabra fue hecha carne por causa de la debilidad del hombre,
-de cuya carne se alimenta el alma viva y de cuya sangre bebe el espíritu vivo;
+de Cuya carne se alimenta el alma viva y de Cuya sangre bebe el espíritu vivo;
 así es alimentado para vida eterna.
 
 [.discourse-part]
@@ -489,7 +491,7 @@ Nada menos que la vida misma podía satisfacer su alma en un principio,
 y nada menos puede hacerlo hoy.
 Cada palabra fresca que sale de la boca de Dios es alimento y vida para el hombre.
 Dios le habla al hombre con frecuencia mostrándole lo que es bueno,
-pero él es incapaz de saborear o alimentarse de eso porque
+pero él es incapaz de saborear o alimentarse de eso, porque
 por el error y la alienación de su mente desea otra cosa.
 La Palabra no está lejos de ningún hombre,
 pero los oídos de los hombres generalmente se detienen contra
@@ -527,7 +529,7 @@ La letra de cualquier dispensación mata; el Espíritu es el único que da vida.
 Un hombre puede leer la letra de las Escrituras diligentemente,
 acumular un gran conocimiento a partir de ella y alimentarse allí con avidez,
 pero el único que se alimenta de esta manera es el espíritu muerto.
-Entre tanto, el alma subyace flaca, estéril, hambrienta e insatisfecha,
+Mientras tanto, el alma subyace flaca, estéril, hambrienta e insatisfecha,
 y lo sentirá cuando despierte.
 
 [.discourse-part]
@@ -547,7 +549,7 @@ Pregunta: ¿Cómo llego a este misterio?
 
 [.discourse-part]
 Respuesta:
-Sólo hay una llave que puede abrirlo y sólo hay una
+Sólo hay una llave que puede abrirlo, y sólo hay una
 mano que puede darle vuelta a la llave.
 Y sólo hay una vasija, un corazón, un espíritu que puede recibir el conocimiento.
 
@@ -555,28 +557,28 @@ Y sólo hay una vasija, un corazón, un espíritu que puede recibir el conocimie
 Pregunta: ¿Cómo llego a ese corazón?
 
 [.discourse-part]
-Respuesta: De la misma manera que usted fue tocado por el enemigo, lo dejó entrar,
-y no lo rechazó con el poder de esa vida que era más fuerte que él. Igual ahora,
-cuando usted sea tocado y atraído por su Amigo,
-y de algún modo encuentre el comienzo de Su virtud entrando en usted,
-ríndase en y por esa vida y virtud,
-y espere más. Y conforme usted sienta que lo llama y crece en usted,
-siga el sendero y ella lo sacará de la tierra de muerte y oscuridad por un camino maravilloso,
-lo sacará de la tierra en la que el alma ha estado cautiva
-y lo introducirá en la tierra de vida y perfecta libertad.
+Respuesta: De la misma manera que fuiste tocado por el enemigo, lo dejaste entrar,
+y no lo rechazaste con el poder de esa vida que era más fuerte que él. Igual ahora,
+cuando seas tocado y atraído por tu Amigo,
+y de algún modo encuentres el comienzo de Su virtud entrando en ti,
+ríndete en y por esa vida y virtud,
+y espera más. Y conforme sientas que te llama y crece en ti,
+sigue el sendero y ella te sacará de la tierra de muerte y oscuridad por un camino maravilloso,
+te sacará de la tierra en la que el alma ha estado cautiva
+y te introducirá en la tierra de vida y perfecta libertad.
 
 [.discourse-part]
 Pregunta: Pero, ¿puedo hacer algo yo en pro de mi propia salvación?
 
 [.discourse-part]
-Respuesta: Por usted mismo no,
-pero en el poder de Aquel que obra en usted tanto el querer como el hacer,
-puede hacer un poquito al principio.
-A medida que ese poder crezca en usted, será capaz de querer y hacer más,
-al punto de que nada llegue a ser demasiado difícil para usted.
-Cuando usted lo haya conquistado todo, sufrido todo y realizado todo,
-verá y será capaz de decir con entendimiento que no ha hecho nada, que la eterna virtud,
-vida y poder lo han forjado todo en usted.
+Respuesta: Por ti mismo no,
+pero en el poder de Aquel que obra en ti tanto el querer como el hacer,
+puedes hacer un poquito al principio.
+A medida que ese poder crezca en ti, serás capaz de querer y hacer más,
+al punto de que nada llegue a ser demasiado difícil para ti.
+Cuando lo hayas conquistado todo, sufrido todo y realizado todo,
+verás y serás capaz de decir con entendimiento que no has hecho nada, que la eterna virtud,
+vida y poder lo han forjado todo en ti.
 
 [.discourse-part]
 Pregunta: Percibo por lo que se ha dicho que hay un Salvador, uno que tiene virtud,
@@ -585,7 +587,7 @@ vida y poder en Él para salvar, ¿cómo puedo encontrarme con Él?
 [.discourse-part]
 Respuesta: Sí,
 Aquel que hizo al hombre lo compadece y no está dispuesto
-a que el hombre perezca en el hoyo en el que cayó,
+a que perezca en el hoyo en el que cayó,
 sino que ha señalado a Uno para sacarlo y salvarlo.
 
 [.discourse-part]
@@ -595,8 +597,8 @@ Pregunta: ¿Quién es este Salvador?
 Respuesta: Él es el Árbol de la Vida del que he hablado todo este tiempo,
 cuyas hojas tienen virtud en ellas para sanar a las naciones.
 Él es la planta de justicia, la planta en la mano derecha de Dios.
-¿Ha experimentado alguna vez en usted dicha planta,
-plantada ahí por la mano derecha de Dios?
+¿Has experimentado alguna vez dicha planta,
+sembrada ahí por la mano derecha de Dios?
 Él es la resurrección y la vida, quien levanta al alma muerta y hace que viva.
 Él es el maná espiritual del que las almas vivas se alimentan.
 Sí, su carne es verdadera comida y su sangre verdadera bebida,
@@ -609,9 +611,9 @@ Pregunta: Pero, ¿tiene nombre este Salvador?
 
 [.discourse-part]
 Respuesta:
-Sería mejor para usted aprender Su nombre al experimentar
-Su virtud y Su poder en su corazón. No obstante,
-si puede con esto, este es su nombre: Luz, Luz del Mundo.
+Sería mejor que aprendieras Su nombre al experimentar
+Su virtud y Su poder en tu corazón. No obstante,
+si puedes con esto, este es su nombre: Luz, Luz del Mundo.
 Él es la luz que alumbra a los gentiles,
 para poder convertirlos y hacerlos parte del Israel de Dios
 y para que Dios llegue a ser la gloria de ellos.
@@ -629,7 +631,7 @@ Pregunta: ¿Por qué lo llama usted la luz?
 Respuesta: Sí,
 pero sólo recibiéndolo como la luz es que llegamos a conocer Sus otros nombres.
 Él es la vida, la justicia, el poder, la sabiduría, la paz, etc.,
-pero Él es todo esto en la luz y en la luz lo aprendemos y lo recibimos todo.
+pero Él es todo esto en la luz, y en la luz lo aprendemos y lo recibimos todo.
 Ninguna de estas cosas puede ser conocida en el espíritu excepto en y por la luz.
 
 [.discourse-part]
@@ -667,7 +669,7 @@ Pregunta: ¿Qué son esas tinieblas en donde brilla la luz?
 Respuesta: Las tinieblas son el hombre, el corazón del hombre, la consciencia del hombre,
 el espíritu del hombre.
 Este es el mundo del que Cristo, el Sol de justicia,
-es la luz en aquellas partes en la que Él hace que los rayos de Su luz brillen.
+es la luz en aquellas partes en las que Él hace que los rayos de Su luz brillen.
 No obstante,
 las tinieblas no pueden comprender el más mínimo brillo de esta luz en ninguna parte.
 
@@ -679,22 +681,22 @@ Respuesta: Las tinieblas no son convertidas;
 todo hombre en ese estado es reprobado y la ira permanece sobre él. Es por eso
 que las tinieblas deben ser rechazadas junto con el hombre en las tinieblas,
 pero el alma que es tocada por la luz y hecha sensible a ella,
-la sigue en la vida y en el poder que es engendrado, sacada del horrible pozo, y salvada.
+la sigue en la vida y en el poder que es engendrado, es sacada del horrible pozo y salvada.
 
 [.discourse-part]
 Pregunta: ¿Cómo puedo encontrar la luz en medio de las tinieblas de mi corazón,
 dado que son tan grandes y la Semilla tan pequeña?
 
 [.discourse-part]
-Respuesta: Mediante su revelación y batalla contra las tinieblas.
+Respuesta: Mediante Su revelación y batalla contra las tinieblas.
 Hay algo que revela tanto la abierta como la secreta iniquidad del corazón corrupto,
 y encuentra la luz bajo todas sus cubiertas de celo, santidad,
 apariencia de humildad y justicia propia.
 Eso que guerrea contra las tinieblas para sacar a las personas
 de todo fundamento falso y llevarlas al fundamento vivo y verdadero,
 es la luz.
-Así es como usted puede encontrarla,
-la encuentra de un momento a otro obrando en su corazón.
+Así es como puedes encontrarla,
+la encuentras de un momento a otro obrando en tu corazón.
 
 [.discourse-part]
 Pregunta: Habiendo encontrado la luz,
@@ -718,20 +720,20 @@ entonces sería capaz de creer, pero en definitiva, mi corazón muerto no puede.
 
 [.discourse-part]
 Respuesta:
-¿Nunca ha experimentado usted un suspiro de anhelo verdadero y honesto hacia Dios?
-¿Nunca ha encontrado que el pecado es una carga real (no imaginaria)?
+¿Nunca has experimentado un suspiro de anhelo verdadero y honesto hacia Dios?
+¿Nunca has encontrado que el pecado es una carga real (no imaginaria)?
 Esto provenía de la vida.
-Había algo engendrado por Dios en usted que sentía esto.
-Y ciertamente no era la carne ni la sangre en usted, sino algo de arriba.
-Si usted hubiera conocido el origen de esa vida,
-se habría alimentado y crecido en la virtud y poder de la fuente de donde esa vida provenía.
+Había algo engendrado por Dios en ti que sentía esto.
+Y ciertamente no era la carne ni la sangre en ti, sino algo de arriba.
+Si hubieras conocido el origen de esa vida,
+te habrías alimentado y crecido en la virtud y poder de la fuente de donde esa vida provenía.
 
 [.discourse-part]
 Pregunta: Si esto fuera cierto, entonces todos los hombres tienen poder para creer.
 
 [.discourse-part]
 Respuesta: En la luz que alumbra en todos, y visita a todos, está el poder para creer.
-Este poder lucha con la criatura y busca obrar él mismo en la criatura,
+Este poder lucha con la criatura y busca obrar en la criatura,
 y en donde se ha producido el más pequeño suspiro tras la vida,
 también se ha gustado el poder.
 Pero el gran engañador de las almas levanta la mente del hombre
@@ -748,8 +750,8 @@ cuidado con tratar de subir de otra manera.
 Pregunta: ¿Qué es creer en la luz?
 
 [.discourse-part]
-Respuesta: Es recibir el testimonio de la luz con respecto al bien y al mal, y ya sea,
-volverse hacia el bien o alejarse del mal,
+Respuesta: Es recibir el testimonio de la luz con respecto al bien y al mal, y volverse,
+ya sea hacia el bien o alejarse del mal,
 en la voluntad y poder que la luz engendra en el corazón.
 
 [.discourse-part]
@@ -757,11 +759,11 @@ Pregunta: ¿Cómo me salvará esto?
 
 [.discourse-part]
 Respuesta: Por este medio:
-Eso que lo destruye a usted y lo separa del Dios vivo será arrancado diariamente,
-y el corazón será cambiado cada día a la imagen del que es la luz.
-Usted será llevado a la unidad y a la comunión con
-la luz poseyéndola y siendo poseído por ella.
-¡Esta es su salvación!
+Eso que to destruye y te separa del Dios vivo será arrancado diariamente,
+y el corazón será cambiado día a día a la imagen del que es la luz.
+Tú serás llevado a la unidad y a la comunión con
+la luz, poseyéndola y siendo poseído por ella.
+¡Esta es tu salvación!
 
 [.discourse-part]
 Pregunta: Nosotros pensábamos que la salvación nos sería concedida en el futuro,
@@ -779,7 +781,7 @@ como por el Espíritu del Señor.
 Pregunta: Demuestre más específicamente cómo la fe o creer en la luz obra la salvación.
 
 [.discourse-part]
-Respuesta: 1. En primer lugar causa temor y temblor para sujetar al pecador.
+Respuesta: 1. En primer lugar causa temor y temblor para apoderarse del pecador.
 El Señor Dios Todopoderoso, mediante el aumento de Su luz en el corazón,
 hace que los poderes de las tinieblas se sacudan,
 que la tierra tiemble y que las colinas y las montañas se derritan;
@@ -787,19 +789,19 @@ luego la planta del Señor brota del suelo seco y estéril,
 y por el rocío y las lluvias que caen de arriba, prospera,
 crece y se extiende hasta llenar la tierra de Dios.
 
-2+++.+++ En este temor y temblor la obra del verdadero
-arrepentimiento y conversión se inicia y continua.
+2+++.+++ En este temor y temblor se inicia y continua
+la obra del verdadero arrepentimiento y conversión.
 Hay un vuelco del alma de las tinieblas a la luz,
 del poder de las tinieblas al poder de la luz,
 del espíritu de engaño al espíritu de verdad,
 y de toda falsa aparición e imaginación acerca de la santidad a
 lo que la luz eterna manifiesta ser realmente así. Este es un tiempo
-de profunda lamentación porque la separación obra en el interior,
-la fuerza del enemigo no ha sido quebrantada ni sometida en el corazón completamente,
-y el corazón a veces continúa anhelando sus antiguos amores.
+de profunda lamentación, mientras la separación obra en el interior,
+mientras la fuerza del enemigo no ha sido quebrantada ni sometida en el corazón completamente,
+y mientras el corazón se siente a veces anhelando sus antiguos amores.
 
 3+++.+++ En la convicción de la luz, y en el temor colocado en el corazón, brota una esperanza,
-una esperanza viva, de la raíz viva,
+una esperanza viva, en la raíz viva,
 la cual se ha manifestado a sí misma y ha comenzado a obrar.
 Porque en el alma que se está volviendo realmente a la luz,
 el brazo eterno y el poder vivo son sentidos.
@@ -808,7 +810,7 @@ tormentas y tempestades con las que se encuentra después; que son muchas, sí,
 en verdad muchas.
 
 4+++.+++ La fe obra justicia y enseña verdadera sabiduría a través de la esperanza.
-Entonces el beneficio de toda la dificultad,
+Entonces, el beneficio de toda la dificultad,
 angustia y miseria anterior empieza a hacerse sentir y la obra continua dulcemente.
 Toda injusticia está en las tinieblas, en la incredulidad y en la falsa esperanza.
 La fe disipa en la luz la injusticia y obra la justicia de Dios en Cristo.
@@ -816,14 +818,14 @@ Ella lo hace a uno verdaderamente sabio, sabio en el poder vivo,
 en una sabiduría que el hombre no puede aprender en ningún otro lugar.
 
 5+++.+++ En la justicia y en la verdadera sabiduría que es recibida en la luz, brotan el amor,
-la unidad y la comunión con Dios el Padre de luces
+la unidad y la comunión con Dios, el Padre de luces,
 y con todos los que son hijos de la luz.
 Al ser engendrados por Cristo,
 pronto es sentida la unidad con el Padre y con los que han nacido
 del mismo vientre y son partícipes de la misma naturaleza.
 Ahí, en ese amor,
-hay una voluntad y un poder que sienten deponer la
-vida de uno por la menor verdad de Cristo,
+hay una voluntad y un poder que sienten dar la
+vida de uno, incluso por la menor verdad de Cristo,
 o por los hermanos.
 
 6+++.+++ Creer en la luz obra paciencia, mansedumbre, delicadeza, ternura y longanimidad.
@@ -845,25 +847,25 @@ Pero Cristo no lo hace así,
 Él mata la enemistad en el corazón mediante la sangre de Su cruz; así hace la paz.
 Esta es paz verdadera y cierta.
 
-Ahora bien, el alma es introducida en la paz cuando los terrones de tierra son removidos,
+Ahora bien, el alma es introducida en la paz cuando los terrones de la tierra son removidos,
 el enemigo hollado, el pecado eliminado y la vida y el poder están presentes.
 ¡Aquí está el gozo, el gozo inefable!
 Este es un gozo que el mundo no puede ver ni tocar,
 ni el poder de las tinieblas acercarse a interrumpir.
 Aquí ya no existe más el clamor: "`¡Oh,
 miserable hombre!,`" o "`¡Quién me librará!`" Sólo regocijo
-en el que ha dado la victoria y ha hecho al alma victoriosa;
+en Aquel que ha dado la victoria y ha hecho al alma victoriosa;
 de hecho, más que victoriosa.
 Esperen a sentir esto, ustedes,
 los que están ahora gimiendo y siendo oprimidos por
 los inmisericordes poderes de las tinieblas.
 
 Este gozo está lleno de gloria,
-de la gloria que se incrementa cada día al ver y al sentir
+de la gloria que se incrementa cada día, al ver y al sentir
 diariamente la virtud y el poder vivo en Cristo la luz.
 Aquí el alma es continuamente transformada y cambiada
 al salir de lo corruptible a lo incorruptible,
-de la incircuncisión, vergüenza y afrenta para entrar a la circuncisión, vida y gloria.
+de la incircuncisión, vergüenza y afrenta, para entrar a la circuncisión, vida y gloria.
 
 [.discourse-part]
 Pregunta: ¿Hace todo esto la luz?
@@ -903,7 +905,7 @@ Respuesta: Hay dos grandes razones.
 
 1+++.+++ Porque no pueden comprenderla.
 Ellos pueden entender el tipo de conocimiento que
-es adquirido a partir de libros de la naturaleza,
+es adquirido a partir de los libros de la naturaleza,
 a partir de los libros de la ley y los profetas,
 o a partir de los libros de los evangelistas y apóstoles,
 pero no pueden comprender la luz de la que todo esto testifica.
@@ -918,7 +920,7 @@ Puede que su propio conocimiento adquirido les hable de paz,
 pero la luz no lo hará. En este sentido los judíos podían hablar de paz
 entre ellos mismos con las ordenanzas y sacrificios del templo,
 aunque caminaban en la terquedad e incircuncisión de sus corazones,
-resistiéndose siempre a los frenos y movimientos del Espíritu Santo ahí. Así,
+resistiéndose siempre a los frenos y movimientos del Espíritu Santo ahí. Así también,
 los cristianos pueden hablar hoy de paz entre ellos mismos
 por una creencia en la muerte de Cristo en Jerusalén,
 aunque no Lo conozcan en ellos,
@@ -927,7 +929,7 @@ ni reciban Su poder en los frenos y reprimendas por el pecado.
 [.discourse-part]
 Pregunta: Pero hay muchos profesantes, profesantes estrictos,
 que sin ninguna duda han gustado alguna vez de la virtud viva.
-¿Qué los hace ahora tales enemigos de la luz?
+¿Qué los hace ahora tan enemigos de la luz?
 
 [.discourse-part]
 Respuesta: 1. Que hayan caído de lo que alguna vez tuvieron,
@@ -941,7 +943,7 @@ y lo habrían preservado de haber sabido cómo volverse y permanecer en ella.
 sus prácticas religiosas y las imitaciones que han reunido de las Escrituras.
 La luz testifica contra lo que ellos creen y practican fuera de la luz en su injusticia,
 es decir, en esa parte del hombre que no puede conocer o ser el adorador.
-¿Puede culparlos usted por volverse contra ella,
+¿Puedes culparlos por volverse contra ella,
 cuando la luz es tan grande enemigo de ellos?
 ¿Cómo podrían, habiendo matado y asesinado al Justo en ellos mismos,
 reconocer y darle Su debido honor en otros?
@@ -957,8 +959,8 @@ lo que le hacen ellos a la menor aparición de Su luz en sus corazones,
 se lo hacen a Él. Es más, nuestro Señor Jesucristo, este mismo día,
 está tan verdaderamente crucificado en el Egipto y en la Sodoma espiritual en ellos,
 como lo estaba fuera de las puertas de Jerusalén. Su justa sangre clama tan fuerte
-contra los profesantes de esta era como lo hizo contra los judíos siempre,
-pero los hombres hoy se han endurecido contra Él por el conocimiento
+contra los profesantes de esta época como lo hizo siempre contra los judíos;
+pero hoy, los hombres se han endurecido contra Él por el conocimiento
 vanidoso que han reunido de las Escrituras mediante sus imaginaciones.
 Sus ojos no pueden ver más hoy, que lo que pudieron ver los ojos de los judíos entonces.
 
@@ -992,7 +994,7 @@ en tu corazón y en tu boca,`" les dice Moisés a los judíos,
 y les dice Pablo a los cristianos.
 ¿Con qué fin les dicen ellos que está ahí? Para que ahí esperen oír su voz y obedecerla.
 
-Ahora ponga atención,
+Ahora pon atención,
 si un hombre pudiera practicar y realizar todas las cosas
 mencionadas en las Escrituras sin haberse vuelto a la luz,
 aún no está en el camino de salvación. Pues el camino de salvación no es un camino particular,
@@ -1000,7 +1002,7 @@ o un curso de ordenanzas y deberes prescritos en las Escrituras, sino un camino 
 un camino vivo,
 un camino que el más sabio profesante mediante su propia sabiduría nunca podría conocer.
 ("`Yo los llevaré por un camino que ustedes no han conocido.`") Así, pues,
-mientras los hombres no conozcan ni se vuelvan a
+mientras los hombres no conozcan, ni se vuelvan a
 la luz y al poder del que las Escrituras testifican,
-todas sus lecturas, oraciones y práctica de ordenanzas y deberes son en vano.
+todas sus lecturas, oraciones y prácticas de ordenanzas y deberes son en vano.
 Al final esto probará ser una cubierta falsa, no la cubierta del Espíritu.
